CAY-3023 Replace QueryResult with a List of redesigned QueryResultItems